--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 ctools information
 ==================
-Version:             00-08-01 (8 January 2015)
+Version:             0.9.0 (20 May 2015)
 Author:              Juergen Knodlseder (jurgen.knodlseder@irap.omp.eu)
-GammaLib dependency: 00-09-00
+GammaLib dependency: 0.10.0
 
 
 License information
@@ -34,20 +34,27 @@ for the high-level analysis of astronomical gamma-ray data.
 
 The following tools are available:
 
-    ctbin    - event binning
-    ctlike   - maximum likelihood model fitting
-    ctmodel  - generation of model counts map
-    ctobssim - simulation of CTA observations
-    ctselect - event selection
-    ctskymap - CTA sky mapping tool
+    ctbin       - event binning
+    ctbkgcube   - generate a background cube
+    ctbutterfly - create a butterfly
+    ctcubemask  - mask bins in binned analysis
+    ctexpcube   - generate an exposure cube
+    ctlike      - maximum likelihood model fitting
+    ctmodel     - generation of model counts map
+    ctobssim    - simulation of CTA observations
+    ctpsfcube   - generate a PSF cube
+    ctselect    - event selection
+    ctskymap    - CTA sky mapping tool
+    cttsmap     - generate a TS map
+    ctulimit    - compute upper limits
 
 
 Web sites
 =========
-http://cta.irap.omp.eu/ctools                   - ctools documentation
-https://cta-redmine.irap.omp.eu/projects/ctools - for ctools development
-http://gammalib.sourceforge.net                 - for GammaLib documentation
-https://sourceforge.net/projects/gammalib/      - for GammaLib downloads
+http://cta.irap.omp.eu/ctools                     - ctools documentation
+https://cta-redmine.irap.omp.eu/projects/ctools   - for ctools development
+https://cta-redmine.irap.omp.eu/projects/gammalib - for GammaLib documentation
+https://sourceforge.net/projects/gammalib/        - for GammaLib downloads
 
 
 Prerequisites
