Allocate optimizer in ctlike upon construction and adapt cttsmap to new GOptimizerLM logger constructor interface (now takes a pointer instead of a reference).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2015-06-02  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-06-05  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.10.0 released
         =========================
 
+        Allocate optimizer in ctlike upon construction (#1471)
         Move cscripts into the ctools Python module (#1470)
 
 
