Update author list.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
-Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
+Johan Bregeon (johan.bregeon@lupm.in2p3.fr)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
-Michael Mayer (michael.mayer@physik.hu-berlin.de)
+Florent Forest (florent.forest@isae.fr)
+Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 Chia-Chun Lu (Chia-Chun.Lu@mpi-hd.mpg.de)
+Michael Mayer (michael.mayer@physik.hu-berlin.de)
+
