--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2015-06-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-07-03  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.10.0 released
         =========================
 
+        Add csinfo script (#1489)
         Add cterror tool
         Check existence of ROI in ctbin (#1476)
         Allocate optimizer in ctlike upon construction (#1471)
