--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Johan Bregeon (johan.bregeon@lupm.in2p3.fr)
+Rolf Buehler (rolf.buehler@desy.de)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
 Florent Forest (florent.forest@isae.fr)
