Update change log.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2015-10-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-10-28  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.10.0 released
         =========================
 
+        Specifying --help on command line displays help text (#572)
         Limit power law parameters in ctbkgcube (#1547)
         Extend cspull to stacked analysis (#1503)
         Add tests for installed ctools version (#1486)
