--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-2015-11-06  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-11-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.0.0 released
         ========================
 
-        Implement handling of stacked data in csspec (#1566).
+        Implement handling of stacked data in csspec (#1566)
+        Resolve Python test problem on El Capitan (#1563)
 
 
 2015-10-31  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
