--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctools 1.0.0
 
 Author(s) : Juergen Knoedlseder
 
-6 November 2015
+19 November 2015
 
 
 1. Introduction
@@ -14,7 +14,10 @@ version 1.0.0 or above.
 
 2. Configuration
 -----------------
-None
+A special post processing of the Python module libraries has been added for
+Mac OS X 10.11 and higher (El Capitan). This post processing is a replacement for
+setting DYLD_LIBRARY_PATH during unit testing since the environment variable is
+ignored in certain circumstances by El Capitan.
 
 
 3. Python interface
