--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2016-01-11  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-01-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
+
+        ctselect allows usage of non-default events and GTI extensions (#1598)
 
 
 2016-01-11  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
