--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-2016-01-11  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-01-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Bug fix version 1.0.1 released
         ================================
 
         Re-enable ctmodel computation for stacked analysis (#1609)
         Solve compatibility issues with Anaconda on Mac OS X (#1607)
+        Change diffuse map for science verification
 
 
 2015-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
