--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctools 1.1.0
 
 Author(s) : Juergen Knoedlseder
 
-20 January 2016
+11 February 2016
 
 
 1. Introduction
@@ -127,7 +127,8 @@ None
 
 19. cscripts
 ------------
-None
+Added the csiactcopy script that copies IACT data from a remote machine to
+the user's machine (#1661).
 
 
 20. Examples
