--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-02-11  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-02-17  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
 
+        Subdivide simulation energy range in ctobssim (#1673)
         Delete existing events before simulation in ctobssim (#1663)
         Add csiactcopy script (#1661)
         ctselect allows usage of non-default events and GTI extensions (#1598)
