--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-02-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-02-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
 
+        Add publish() methods to tools producing images (#1231)
         Read ahead output filename in cterror (#1700)
         Subdivide simulation energy range in ctobssim (#1673)
         Delete existing events before simulation in ctobssim (#1663)
